# cmake4rhino

./: .gitignore  CMakeLists.txt  README.md  cmake4rhino.rc  cmake4rhino.rc.in  cookiecutter.json
.github/actions/rhino-sdk/: action.yml
.github/workflows/: build_cmake.yml  build_cookietemplate.yml  update_cookietemplate.yml
cmake/: FindMFC.cmake  FindRhino8SDK.cmake  FindRhinoExe.cmake  Utils.cmake  dummy.cpp
include/: cmake4rhinoApp.h  cmake4rhinoPlugIn.h  stdafx.h
include/CMake4Rhino/: dummyLibFile.h
logo/: logo_notxt.xcf
src/: cmake4rhinoApp.cpp  cmake4rhinoPlugIn.cpp  cmdCDummyCmake4rhino.cpp  cmdRhCpp.cpp  cmdcmake4rhino.cpp  stdafx.cpp
src/CMake4Rhino/: dummyLibFile.cpp
src/core/: dummyLibFile.cpp
template/: .gitignore
template/.github/actions/rhino-sdk/: action.yml
template/.github/workflows/: build_cmake.yml  build_cookietemplate.yml
template/{{cookiecutter.your_plugin_name}}/: CMakeLists.txt  LICENSE  README.md  {{cookiecutter.your_plugin_name}}.rc.in
template/{{cookiecutter.your_plugin_name}}/cmake/: FindRhino8SDK.cmake  FindRhinoExe.cmake
template/{{cookiecutter.your_plugin_name}}/include/: {{cookiecutter.your_plugin_name}}PlugIn.h
template/{{cookiecutter.your_plugin_name}}/include/core/: dummyLibFile.h
template/{{cookiecutter.your_plugin_name}}/src/: cmd{{cookiecutter.your_plugin_name}}.cpp  stdafx.cpp  {{cookiecutter.your_plugin_name}}PlugIn.cpp
template/{{cookiecutter.your_plugin_name}}/tests/: CMakeLists.txt  test_integration_cmds.cpp
template/{{cookiecutter.your_plugin_name}}/~logo/: CMakeLists.txt  ascified_logo_gray_400.txt  ascified_logo_gray_400_15.txt  ascified_logo_gray_400_17.txt  logo.xcf  logo_notxt.xcf  logo_notxt_256.xcf
tests/: CMakeLists.txt  fixture_rhinodoc.hh  test_integration_cmds.cpp  test_main.cpp  test_smoke.cpp  test_unit_cmake4rhino.cpp  test_unit_core.cpp
tests/mocks/: basefile.3dm
{{cookiecutter.your_plugin_name}}/: CMakeLists.txt  README.md  {{cookiecutter.your_plugin_name}}.rc
{{cookiecutter.your_plugin_name}}/include/: Resource.h  stdafx.h  {{cookiecutter.your_plugin_name}}App.h
{{cookiecutter.your_plugin_name}}/src/: {{cookiecutter.your_plugin_name}}App.cpp
{{cookiecutter.your_plugin_name}}/src/core/: dummyLibFile.cpp
{{cookiecutter.your_plugin_name}}/tests/: test_main.cpp  test_unit_core.cpp
{{cookiecutter.your_plugin_name}}/~logo/: ascified_logo.html  ascified_logo.txt  ascified_logo_gray_400_13.txt  ascified_logo_gray_400_20.txt  ascified_neofetch_logo.txt  cmake-sticker.cc
~logo/: cmake-sticker.cc  logo.xcf
~temp/: RhCpp.def  RhCpp.vcxproj  RhCpp.vcxproj.filters  RhCppOld.rc
